// Copyright 2022 MobiledgeX, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package edgeproto;

import "google/api/annotations.proto";
import "github.com/edgexr/edge-cloud/protogen/protogen.proto";
import "gogoproto/gogo.proto";
import "node.proto";

option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_unkeyed_all) = false;
option (gogoproto.goproto_sizecache_all) = false;

// DebugRequest. Keep everything in one struct to make it easy to send commands without having to change the code.
message DebugRequest {
  // Service node identifier (see NodeShow)
  NodeKey node = 1 [(gogoproto.nullable) = false];
  // Comma separated list of debug level names: etcd,api,notify,dmereq,locapi,infra,metrics,upgrade,info,sampled,fedapi
  string levels = 2;
  // Debug command (use "help" to see available commands)
  string cmd = 3;
  // if possible, make output pretty
  bool pretty = 4;
  // Id used internally
  uint64 id = 5 [(protogen.backend) = true];
  // Additional arguments for cmd
  string args = 6;
  // custom timeout (duration, defaults to 10s)
  int64 timeout = 7 [(gogoproto.casttype) = "Duration"];
  option (protogen.alias) = "name=Node.Name,type=Node.Type,cloudlet=Node.CloudletKey.Name,organization=Node.CloudletKey.Organization,region=Node.Region,cmd=Cmd";
  option (protogen.notify_message) = true;
}

message DebugReply {
  // Service node identifier (see NodeShow)
  NodeKey node = 1 [(gogoproto.nullable) = false];
  // Debug output, if any
  string output = 2;
  // Id used internally
  uint64 id = 3 [(protogen.backend) = true];
  option (protogen.notify_message) = true;
  option (protogen.notify_print_send_recv) = false; // debug output can be large
}

service DebugApi {
  // Enable debug log levels
  rpc EnableDebugLevels(DebugRequest) returns (stream DebugReply) {
    option (google.api.http) = {
      post: "/debug/enablelevels"
      body: "*"
    };
    option (protogen.method_noconfig) = "Cmd,Id";
    option (protogen.method_also_required) = "Levels";
    option (protogen.mc2_api) = "ResourceConfig,ActionManage,";
    option (protogen.mc2_api_notifyroot) = true;
  }
  // Disable debug log levels
  rpc DisableDebugLevels(DebugRequest) returns (stream DebugReply) {
    option (google.api.http) = {
      post: "/debug/disablelevels"
      body: "*"
    };
    option (protogen.method_noconfig) = "Cmd,Id";
    option (protogen.method_also_required) = "Levels";
    option (protogen.mc2_api) = "ResourceConfig,ActionManage,";
    option (protogen.mc2_api_notifyroot) = true;
  }
  // Show debug log levels
  rpc ShowDebugLevels(DebugRequest) returns (stream DebugReply) {
    option (google.api.http) = {
      post: "/debug/showlevels"
      body: "*"
    };
    option (protogen.method_noconfig) = "Levels,Cmd,Id";
    option (protogen.mc2_api) = "ResourceConfig,ActionView,";
    option (protogen.mc2_api_notifyroot) = true;
    option (protogen.non_standard_show) = true;
  }
  // Run debug command
  rpc RunDebug(DebugRequest) returns (stream DebugReply) {
    option (google.api.http) = {
      post: "/debug/run"
      body: "*"
    };
    option (protogen.method_noconfig) = "Levels,Id";
    option (protogen.method_also_required) = "Cmd";
    option (protogen.mc2_api) = "ResourceConfig,ActionManage,";
    option (protogen.mc2_api_notifyroot) = true;
  }
}

message DebugData {
  repeated DebugRequest requests = 1 [(gogoproto.nullable) = false];
  option (protogen.e2edata) = true;
  option (protogen.generate_copy_in_fields) = false;
}
